--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     environment:
       APP_ENV: production
       CONTAINER_ROLE: app
+
     volumes:
       - composer_cache:/root/.composer/cache:cached
       - storage:/var/www/storage
@@ -24,12 +25,11 @@ services:
       - ./docker/config/php.ini:/usr/local/etc/php/php.ini:ro # READONLY
     command:
       - /docker-entrypoint-init.d/init.sh
-    # ports:
-    #   - 8000:8000
     networks:
       - db-network
     depends_on:
       - db
+
   db:
     image: mysql:8.0.19
     command: --default-authentication-plugin=mysql_native_password
@@ -43,5 +43,21 @@ services:
       - db_data:/var/lib/mysql/
     networks:
       - db-network
-    # ports:
-    #   - 3306:3306
+
+  # queue:
+  #   <<: *app
+  #   restart: 'no'
+  #   environment:
+  #     APP_ENV: local
+  #     CONTAINER_ROLE: queue
+  #     DB_USERNAME: "" # !!! MUST override on docker-compose.override.yml !!!
+  #     DB_PASSWORD: "" # !!! MUST override on docker-compose.override.yml !!!
+  #   depends_on:
+  #     - application
+  scheduler:
+    <<: *app
+    environment:
+      APP_ENV: local
+      CONTAINER_ROLE: scheduler
+    depends_on:
+      - application
